# Quantum-Portfolio-Optimizer

./: .gitignore  CLAUDE.md  README.md
backend/: optimizer.py  pyproject.toml  requirements.txt  server.py  stock_data.py  vercel.json
frontend/: index.html  package-lock.json
frontend/src/: App.jsx  index.css
