[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.136.0",
    "numpy>=2.4.4",
    "python-dotenv>=1.2.2",
    "qiskit>=2.4.0",
    "qiskit-aer>=0.17.2",
    "qiskit-algorithms>=0.4.0",
    "qiskit-optimization>=0.7.0",
    "uvicorn>=0.45.0",
    "yfinance>=1.3.0",
]
